--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GOOGLE_CLOUD_API_KEY=AIzaSyDJkBw61oJPNFWO8PWpdkdBWEEqtJaX6PY
 GEMINI_API_KEY=AIzaSyAHA40CN4fRF605kcsqTMQSvzKFkAmNWec
+GOOGLE_API_KEY=AIzaSyCzrJnKy3BcO-7PqtexIRsouhkqo6ooqJA
