--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,14 +11,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  image_picker: ^0.8.9 # Dependencia para el acceso a la cámara
+  image_picker: ^1.1.2 # Dependencia para el acceso a la cámara
   http: ^1.2.2
   async: ^2.11.0
   # Si usas Google Cloud Vision, también puedes agregar esta dependencia:
-  googleapis: ^11.4.0
+  googleapis: ^13.2.0
   googleapis_auth: ^1.3.0
   flutter_dotenv: ^5.2.1
+  geolocator: ^10.0.0
   flutter_gemini: ^2.0.5
+  shared_preferences: ^2.3.2
+  connectivity_plus: ^6.1.0
   # iOS style icons para un diseño Cupertino
   cupertino_icons: ^1.0.8
 
@@ -32,3 +35,6 @@ flutter:
   uses-material-design: true
   assets:
     - .env
+    - assets/logo.jpg
+    - assets/texture.png
+
