--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-GOOGLE_CLOUD_API_KEY=AIzaSyDJkBw61oJPNFWO8PWpdkdBWEEqtJaX6PY
-GEMINI_API_KEY=AIzaSyAHA40CN4fRF605kcsqTMQSvzKFkAmNWec
-GOOGLE_API_KEY=AIzaSyCzrJnKy3BcO-7PqtexIRsouhkqo6ooqJA
+GOOGLE_CLOUD_API_KEY=SUBE TU API
+GEMINI_API_KEY=GENERA TU APO Y PONLA AQUI
+GOOGLE_API_KEY=SUBE TU API Y PONLA AQUI
